--- a/assets/custom.css
+++ b/assets/custom.css
@@ -7,7 +7,7 @@
     z-index: -9999;
     height: 5000px;
     width: 3000px;
-    background: url(assets/bg.png) repeat 0 0;
+    background: url(bg.png) repeat 0 0;
 }
 #body-container {
     background: rgba(225,225,225,0.9);
